# ticket-service

./: pyproject.toml
tests/: test_ticket_service.py
ticket_service/: app.py
ticket_service/data/: Ticket.py
ticket_service/service/: __init__.py  ticket_service.py
